// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`overflowY renders 0 1`] = `
Array [
  .c0 {
  overflow-y: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: 0;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowY renders function 1`] = `
Array [
  .c0 {
  overflow-y: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: has;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: has;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowY renders invalid theme path 1`] = `
Array [
  .c0 {
  overflow-y: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowY renders negative number 1`] = `
Array [
  .c0 {
  overflow-y: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowY renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  overflow-y: July;
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-y: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: July;
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-y: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-y: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-y: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowY renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    overflow-y: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-y: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    overflow-y: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-y: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-y: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    overflow-y: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    overflow-y: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowY renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  overflow-y: July;
}

@media May {
  .c0 {
    overflow-y: August;
  }
}

@media April {
  .c0 {
    overflow-y: September;
  }
}

@media January {
  .c0 {
    overflow-y: November;
  }
}

@media April {
  .c0 {
    overflow-y: August;
  }
}

@media June {
  .c0 {
    overflow-y: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: July;
}

@media May {
  .c0 {
    overflow-y: August;
  }
}

@media April {
  .c0 {
    overflow-y: September;
  }
}

@media January {
  .c0 {
    overflow-y: November;
  }
}

@media April {
  .c0 {
    overflow-y: August;
  }
}

@media June {
  .c0 {
    overflow-y: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-y: November;
  }
}

@media April {
  .c0 {
    overflow-y: January;
  }
}

@media January {
  .c0 {
    overflow-y: December;
  }
}

@media April {
  .c0 {
    overflow-y: April;
  }
}

@media June {
  .c0 {
    overflow-y: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-y: November;
  }
}

@media April {
  .c0 {
    overflow-y: January;
  }
}

@media January {
  .c0 {
    overflow-y: December;
  }
}

@media April {
  .c0 {
    overflow-y: April;
  }
}

@media June {
  .c0 {
    overflow-y: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowY renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    overflow-y: July;
  }
}

@media April {
  .c0 {
    overflow-y: August;
  }
}

@media January {
  .c0 {
    overflow-y: September;
  }
}

@media April {
  .c0 {
    overflow-y: November;
  }
}

@media June {
  .c0 {
    overflow-y: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    overflow-y: July;
  }
}

@media April {
  .c0 {
    overflow-y: August;
  }
}

@media January {
  .c0 {
    overflow-y: September;
  }
}

@media April {
  .c0 {
    overflow-y: November;
  }
}

@media June {
  .c0 {
    overflow-y: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-y: January;
  }
}

@media April {
  .c0 {
    overflow-y: December;
  }
}

@media January {
  .c0 {
    overflow-y: April;
  }
}

@media April {
  .c0 {
    overflow-y: May;
  }
}

@media June {
  .c0 {
    overflow-y: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    overflow-y: January;
  }
}

@media April {
  .c0 {
    overflow-y: December;
  }
}

@media January {
  .c0 {
    overflow-y: April;
  }
}

@media April {
  .c0 {
    overflow-y: May;
  }
}

@media June {
  .c0 {
    overflow-y: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`overflowY renders postitive number 1`] = `
Array [
  .c0 {
  overflow-y: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowY renders string 1`] = `
Array [
  .c0 {
  overflow-y: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: July;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: June;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: June;
}

<div
    className="c0"
  />,
]
`;

exports[`overflowY renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`overflowY renders valid theme path 1`] = `
Array [
  .c0 {
  overflow-y: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  overflow-y: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
